--- a/single-page/the-end/index.html
+++ b/single-page/the-end/index.html
@@ -17,7 +17,7 @@
 
     <div id="link">
         <div class="cont-box">
-            <a class="cont-text" href="../twig/index.html"><i>colophon</a></i>
+            <a class="cont-text" href="../../colophon/index.html"><i>colophon</a></i>
         </div> 
     </div>
 </body>
